# ESP32-master

./: README.md  platformio.ini  ไฟล์ main Sensor
lib/: filelist.txt  lv_conf.h  ui.c  ui.h  ui_events.c  ui_events.h
lib/fonts/: ui_font_Font1.c  ui_font_Font24.c
lib/images/: ui_img_110774521.c  ui_img_1875797769.c  ui_img_fan_png.c  ui_img_power_png.c
lib/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
lib/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h
lib/ui/components/: ui_comp_hook.c
lib/ui/images/: ui_img_1102696345.c  ui_img_1772094659.c  ui_img_eight_32_png.c  ui_img_eight_64_png.c  ui_img_five_64_png.c  ui_img_four_64_png.c  ui_img_nine_64_png.c  ui_img_one_64_png.c  ui_img_pause_32_png.c  ui_img_seven_64_png.c  ui_img_six_64_png.c  ui_img_three_64_png.c  ui_img_two_64_png.c  ui_img_zero_64_png.c
lib/ui/screens/: ui_Screen2.c  ui_Screen3.c
src/: clock.txt  main.cpp
